fixed shifting position from side to side

--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+section {
+  display: block;
+}
+
+figure {
+  margin: 0;
+}
+
 .container {
-  width: 350px;
-  height: 350px;
+  width: 362px;
+  height: 362px;
   position: relative;
   perspective: 800px;
+  perspective-origin: center;
+  margin: auto;
 }
 
 #card {
@@ -20,18 +30,26 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border: 1px solid black;
-  padding: 5px;
 }
 
 #card .front {
-  background: white;
+  background: red;
+  text-align: center;
 }
 #card .back {
-  background: white;
+  background: blue;
+  overflow: scroll;
   transform: rotateY( 180deg );
 }
 
 #card.flipped {
   transform: rotateY( 180deg );
+}
+
+.content {
+  margin: 5px;
+  padding: 5px;
+  background: white;
+  border: 1px solid black;
+  min-height: 90%;
 }
